page-styles/home.module.css
.section1 {
  grid-template-columns: 1fr 429px;
}

.section2 {
  display: flex;
  flex-direction: column;

  h1 {
    font-size: 48px;
    text-align: center;
    width: 100%;
  }

  .tools {
    display: flex;
    align-self: center;
    margin-top: var(--s-layout-gap);

    svg {
      font-size: 6rem;
      width: 100px;

      &:nth-child(1) {
        path {
          fill: #f06529;
        }
      }
      &:nth-child(2) {
        path {
          fill: #f0db4f;
        }
      }
      &:nth-child(3) {
        path {
          fill: #2965f1;
        }
      }
      &:nth-child(4) {
        path {
          fill: #61dbfb;
        }
      }

      & + * {
        margin-left: var(--s-layout-gap);
      }
    }
  }
}

.section3 {
  display: grid;
  grid-template-columns: 500px 1fr;
  gap: 19px;

  h1 {
    text-align: end;
  }
}

.section4 {
  h2 {
    font-size: 48px;
    font-weight: bold;
    margin-top: var(--s-layout-gap);

    span {
      text-decoration: underline;
    }
  }

  .subSection {
    grid-template-columns: 1fr 500px;
    gap: var(--s-layout-gap);

    .privileges {
      display: grid;
      gap: 15px;
    }
  }
}

.section5 {
  margin-bottom: var(--s-layout-gap);
}

@media (--t) {
  .section1 {
    grid-template-columns: 1fr 300px;
    padding-left: 15px;
    padding-right: 15px;
  }

  .section2 {
    h1 {
      font-size: 35px;
    }

    .tools {
      svg {
        font-size: 5rem;
        width: 80px;
      }
    }
  }

  .section3 {
    grid-template-columns: 350px 1fr;
    gap: 15px;
    padding-left: 15px;
    padding-right: 15px;
  }

  .section4 {
    padding-left: 15px;
    padding-right: 15px;

    h2 {
      font-size: 30px;
    }

    .subSection {
      grid-template-columns: 1fr 350px;
      gap: 20px;
    }
  }
}

@media (--m) {
  .section1 {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 150px;
    gap: 30px;
    svg {
      font-size: 7.5rem !important;
    }
  }

  .section2 {
    h1 {
      font-size: 28px;
    }

    .tools {
      flex-direction: column;

      svg {
        font-size: 4rem !important;
        width: 80px;

        & + * {
          margin-left: 0;
          margin-top: 25px;
        }
      }
    }
  }

  .section3 {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 150px;
    gap: 30px;

    h1 {
      order: -1;
      text-align: center;
    }

    svg {
      font-size: 7.5rem !important;
    }
  }

  .section4 {
    h2 {
      font-size: 25px;
    }

    .subSection {
      grid-template-columns: 1fr;
      grid-template-rows: 1fr 150px;
      gap: 30px;

      svg {
        font-size: 7.5rem !important;
      }
    }
  }
}

